# file-server-api

./: .gitignore  ChangeLog.md  LICENSE  README.md  file-server-api.cabal  package.yaml  stack.yaml
src/: API.hs  ClientAPI.hs  ServerAPI.hs
