name:           file-server-api
version:        0.1.0.0
synopsis:       Short description of your package
description:    Please see the README on Github at <https://github.com/JenningsIRE/file-server-api#readme>
homepage:       https://github.com/JenningsIRE/file-server-api#readme
bug-reports:    https://github.com/JenningsIRE/file-server-api/issues
author:         Sam Jennings
maintainer:     jennins@tcd.ie
copyright:      Copyright (C) 2017
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

--extra-source-files:
--    ChangeLog.md
--    README.md

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , API
                     , ClientAPI
                     , ServerAPI

  build-depends:       base >= 4.7 && < 5
                     , servant
                     , servant-client
                     , servant-server
                     , bson-generic
                     , aeson
  default-language: Haskell2010

source-repository head
  type: git
  location: https://github.com/JenningsIRE/file-server-api


--executable file-server-api-exe
--  main-is: Main.hs
--  hs-source-dirs:
--      app
--  ghc-options: -threaded -rtsopts -with-rtsopts=-N
--  build-depends:
--      base >= 4.7 && < 5
--    , file-server-api
--  default-language: Haskell2010

--test-suite file-server-api-test
--  type: exitcode-stdio-1.0
--  main-is: Spec.hs
--  hs-source-dirs:
--      test
--  ghc-options: -threaded -rtsopts -with-rtsopts=-N
--  build-depends:
--      base >= 4.7 && < 5
--    , file-server-api
--  default-language: Haskell2010
